plugins/binding/csharp/source/TellusimCSBase.cs

		
		public bool inside(in Vector3d v) { return tsBoundSphered_inside1(in this, in v); }
		public bool inside(in BoundSphered s) { return tsBoundSphered_inside(in this, in s); }
		
		public float distance(in Vector3d v) { return tsBoundSphered_distance(in this, in v); }
		
		public static BoundSphered operator*(in Matrix4x3d m, in BoundSphered r) { BoundSphered ret = new BoundSphered(); tsMatrix4x3d_mul_bs(ref ret, in m, in r); return ret; }
		public static BoundSphered operator*(in Matrix4x4d m, in BoundSphered r) { BoundSphered ret = new BoundSphered(); tsMatrix4x4d_mul_bs(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", center, radius); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSphered_set_bsf(ref BoundSphered ret, in BoundSpheref s);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSphered_set_bb(ref BoundSphered ret, in BoundBoxd b);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSphered_expand1(ref BoundSphered ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSphered_expand(ref BoundSphered ret, in BoundSphered s);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSphered_expandRadius1(ref BoundSphered ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSphered_expandRadius(ref BoundSphered ret, in BoundSphered s);
		[DllImport(Base.Import)] private static extern bool tsBoundSphered_inside1(in BoundSphered bs, in Vector3d v);
		[DllImport(Base.Import)] private static extern bool tsBoundSphered_inside(in BoundSphered bs, in BoundSphered s);
		[DllImport(Base.Import)] private static extern float tsBoundSphered_distance(in BoundSphered bs, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3d_mul_bs(ref BoundSphered ret, in Matrix4x3d m, in BoundSphered s);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4d_mul_bs(ref BoundSphered ret, in Matrix4x4d m, in BoundSphered s);
		
		public Vector3d center;
		public double radius;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundFrustumf {
		
		public BoundFrustumf(in Matrix4x4f p, in Matrix4x4f m, in Vector3f c, in Vector4f l, in Vector4f r, in Vector4f b, in Vector4f t, in Vector4f n, in Vector4f f) { this.projection = p; this.modelview = m; this.camera = c; this.plane_l = l; this.plane_r = r; this.plane_b = b; this.plane_t = t; this.plane_n = n; this.plane_f = f; this.sign_l = 0; this.sign_r = 0; this.sign_b = 0; this.sign_t = 0; this.sign_n = 0; this.sign_f = 0; }
		public BoundFrustumf(in BoundFrustumf f) { projection = f.projection; modelview = f.modelview; camera = f.camera; plane_l = f.plane_l; plane_r = f.plane_r; plane_b = f.plane_b; plane_t = f.plane_t; plane_n = f.plane_n; plane_f = f.plane_f; sign_l = f.sign_l; sign_r = f.sign_r; sign_b = f.sign_b; sign_t = f.sign_t; sign_n = f.sign_n; sign_f = f.sign_f; }
		public BoundFrustumf(in BoundFrustumd f) { BoundFrustumf ret = new BoundFrustumf(); tsBoundFrustumf_set_bfd(ref ret, in f); projection = ret.projection; modelview = ret.modelview; camera = ret.camera; plane_l = ret.plane_l; plane_r = ret.plane_r; plane_b = ret.plane_b; plane_t = ret.plane_t; plane_n = ret.plane_n; plane_f = ret.plane_f; sign_l = ret.sign_l; sign_r = ret.sign_r; sign_b = ret.sign_b; sign_t = ret.sign_t; sign_n = ret.sign_n; sign_f = ret.sign_f; }
		public BoundFrustumf(in Matrix4x4f p, in Matrix4x4f m, float aspect = 1.0f) { BoundFrustumf ret = new BoundFrustumf(); tsBoundFrustumf_set(ref ret, in p, in m, aspect); projection = ret.projection; modelview = ret.modelview; camera = ret.camera; plane_l = ret.plane_l; plane_r = ret.plane_r; plane_b = ret.plane_b; plane_t = ret.plane_t; plane_n = ret.plane_n; plane_f = ret.plane_f; sign_l = ret.sign_l; sign_r = ret.sign_r; sign_b = ret.sign_b; sign_t = ret.sign_t; sign_n = ret.sign_n; sign_f = ret.sign_f; }
		
		public bool inside(in BoundBoxf bb) { return tsBoundFrustumf_inside_bb(in this, in bb); }
		public bool inside(in BoundSpheref bs) { return tsBoundFrustumf_inside_bs(in this, in bs); }
		
		public override string ToString() { return System.String.Format("{0} : {1} : {2} : {3} : {4} : {5}", plane_l, plane_r, plane_b, plane_t, plane_n, plane_f); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundFrustumf_set_bfd(ref BoundFrustumf ret, in BoundFrustumd bf);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundFrustumf_set(ref BoundFrustumf ret, in Matrix4x4f projection, in Matrix4x4f modelview, float aspect);
		[DllImport(Base.Import)] private static extern bool tsBoundFrustumf_inside_bb(in BoundFrustumf bf, in BoundBoxf bb);
		[DllImport(Base.Import)] private static extern bool tsBoundFrustumf_inside_bs(in BoundFrustumf bf, in BoundSpheref bs);
		
		public Matrix4x4f projection;
		public Matrix4x4f modelview;
		public Vector3f camera;
		
		public Vector4f plane_l;
		public Vector4f plane_r;
		public Vector4f plane_b;
		public Vector4f plane_t;
		public Vector4f plane_n;
		public Vector4f plane_f;
		
		public uint sign_l;
		public uint sign_r;
		public uint sign_b;
		public uint sign_t;
		public uint sign_n;
		public uint sign_f;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundFrustumd {
		
		public BoundFrustumd(in Matrix4x4d p, in Matrix4x4d m, in Vector3d c, in Vector4d l, in Vector4d r, in Vector4d b, in Vector4d t, in Vector4d n, in Vector4d f) { this.projection = p; this.modelview = m; this.camera = c; this.plane_l = l; this.plane_r = r; this.plane_b = b; this.plane_t = t; this.plane_n = n; this.plane_f = f; this.sign_l = 0; this.sign_r = 0; this.sign_b = 0; this.sign_t = 0; this.sign_n = 0; this.sign_f = 0; }
		public BoundFrustumd(in BoundFrustumd f) { projection = f.projection; modelview = f.modelview; camera = f.camera; plane_l = f.plane_l; plane_r = f.plane_r; plane_b = f.plane_b; plane_t = f.plane_t; plane_n = f.plane_n; plane_f = f.plane_f; sign_l = f.sign_l; sign_r = f.sign_r; sign_b = f.sign_b; sign_t = f.sign_t; sign_n = f.sign_n; sign_f = f.sign_f; }
		public BoundFrustumd(in BoundFrustumf f) { BoundFrustumd ret = new BoundFrustumd(); tsBoundFrustumd_set_bff(ref ret, in f); projection = ret.projection; modelview = ret.modelview; camera = ret.camera; plane_l = ret.plane_l; plane_r = ret.plane_r; plane_b = ret.plane_b; plane_t = ret.plane_t; plane_n = ret.plane_n; plane_f = ret.plane_f; sign_l = ret.sign_l; sign_r = ret.sign_r; sign_b = ret.sign_b; sign_t = ret.sign_t; sign_n = ret.sign_n; sign_f = ret.sign_f; }
		public BoundFrustumd(in Matrix4x4d p, in Matrix4x4d m, double aspect = 1.0) { BoundFrustumd ret = new BoundFrustumd(); tsBoundFrustumd_set(ref ret, in p, in m, aspect); projection = ret.projection; modelview = ret.modelview; camera = ret.camera; plane_l = ret.plane_l; plane_r = ret.plane_r; plane_b = ret.plane_b; plane_t = ret.plane_t; plane_n = ret.plane_n; plane_f = ret.plane_f; sign_l = ret.sign_l; sign_r = ret.sign_r; sign_b = ret.sign_b; sign_t = ret.sign_t; sign_n = ret.sign_n; sign_f = ret.sign_f; }
		
		public bool inside(in BoundBoxd bb) { return tsBoundFrustumd_inside_bb(in this, in bb); }
		public bool inside(in BoundSphered bs) { return tsBoundFrustumd_inside_bs(in this, in bs); }
		
		public override string ToString() { return System.String.Format("{0} : {1} : {2} : {3} : {4} : {5}", plane_l, plane_r, plane_b, plane_t, plane_n, plane_f); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundFrustumd_set_bff(ref BoundFrustumd ret, in BoundFrustumf bf);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundFrustumd_set(ref BoundFrustumd ret, in Matrix4x4d projection, in Matrix4x4d modelview, double aspect);
		[DllImport(Base.Import)] private static extern bool tsBoundFrustumd_inside_bb(in BoundFrustumd bf, in BoundBoxd bb);
		[DllImport(Base.Import)] private static extern bool tsBoundFrustumd_inside_bs(in BoundFrustumd bf, in BoundSphered bs);
		
		public Matrix4x4d projection;
		public Matrix4x4d modelview;
		public Vector3d camera;
		
		public Vector4d plane_l;
		public Vector4d plane_r;
		public Vector4d plane_b;
		public Vector4d plane_t;
		public Vector4d plane_n;
		public Vector4d plane_f;
		
		public uint sign_l;
		public uint sign_r;
		public uint sign_b;
		public uint sign_t;
		public uint sign_n;
		public uint sign_f;
	}
	
	/*****************************************************************************\
	 *
	 * Interface
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Rect {
		
		public Rect(float value) { this.left = value; this.right = value; this.bottom = value; this.top = value; }
		public Rect(float horizontal, float vertical) { this.left = horizontal; this.right = horizontal; this.bottom = vertical; this.top = vertical; }
		public Rect(float left, float right, float bottom, float top) { this.left = left; this.right = right; this.bottom = bottom; this.top = top; }
		
		public float left;
		public float right;
		public float bottom;
		public float top;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct FontStyle {
		
		public FontStyle(uint size) { this.size = size; this.scale = 100; this.mono = false; this.kerning = true; this.spacing = Vector2f.zero; this.color = Color.white; this.offset = Vector3f.zero; this.shadow = Color.black; }
		public FontStyle(in Color color) { this.size = 16; this.scale = 100; this.mono = false; this.kerning = true; this.spacing = Vector2f.zero; this.color = color; this.offset = Vector3f.zero; this.shadow = Color.black; }
		public FontStyle(uint size, in Color color) { this.size = size; this.scale = 100; this.mono = false; this.kerning = true; this.spacing = Vector2f.zero; this.color = color; this.offset = Vector3f.zero; this.shadow = Color.black; }
		
		public uint size;
		public uint scale;
		[MarshalAs(UnmanagedType.U1)] public bool mono;
		[MarshalAs(UnmanagedType.U1)] public bool kerning;
		public Vector2f spacing;
		public Color color;
		public Vector3f offset;
		public Color shadow;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct StrokeStyle {
		
		public StrokeStyle(float width) { this.width = width; this.offset = 0.0f; this.color = Color.white; }
		public StrokeStyle(in Color color) { this.width = 0.0f; this.offset = 0.0f; this.color = color; }
		public StrokeStyle(float width, float offset) { this.width = width; this.offset = offset; this.color = Color.white; }
		public StrokeStyle(float width, in Color color) { this.width = width; this.offset = 0.0f; this.color = color; }
		public StrokeStyle(float width, float offset, in Color color) { this.width = width; this.offset = offset; this.color = color; }
		
		public float width;
		public float offset;
		public Color color;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct GradientStyle {
		
		public GradientStyle(in Color c0, in Color c1) { this.radius = 0.0f; this.length = 0.0f; this.center = Vector2f.zero; this.axis = Vector2f.zero; this.color_0 = c0; this.color_1 = c1; }
		public GradientStyle(float radius, in Vector2f center) { this.radius = radius; this.length = 0.0f; this.center = center; this.axis = Vector2f.zero; this.color_0 = Color.white; this.color_1 = Color.white; }
		public GradientStyle(float length, in Vector2f center, in Vector2f axis) { this.radius = 0.0f; this.length = length; this.center = center; this.axis = axis; this.color_0 = Color.white; this.color_1 = Color.white; }
		public GradientStyle(float radius, in Vector2f center, in Color c0, in Color c1) { this.radius = radius; this.length = 0.0f; this.center = center; this.axis = Vector2f.zero; this.color_0 = c0; this.color_1 = c1; }
		public GradientStyle(float length, in Vector2f center, in Vector2f axis, in Color c0, in Color c1) { this.radius = 0.0f; this.length = length; this.center = center; this.axis = axis; this.color_0 = c0; this.color_1 = c1; }
